Add demo controller in the Login page.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
@@ -1,4 +1,4 @@
 ﻿<h1>Login</h1>
 
-<a href="#/matches/todaymatches" class="button">Facebook</a>
-<a href="#/matches/todaymatches" class="button">Guest</a>
+<div ng-click="loginWithFacebook()" class="button">Facebook</div>
+<div ng-click="skipLogin()" class="button">Guest</div>
