--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/HistoryByMonth.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/HistoryByMonth.html
@@ -1,8 +1,37 @@
 ﻿<ion-view view-title="History by month">
     <ion-content>
-        <h1>Month 01</h1><br />
-        <h1>Month 02</h1><br />
-        <h1>Month 03</h1><br />
-        <h1>Month 04</h1><br />
+        <button class="button button-block button-stable">
+            stable
+        </button>
+
+        <button class="button button-block button-positive">
+            positive
+        </button>
+
+        <button class="button button-block button-calm">
+            calm
+        </button>
+
+        <button class="button button-block button-balanced">
+            balanced
+        </button>
+
+        <button class="button button-block button-energized">
+            energized
+        </button>
+
+        <button class="button button-block button-dark">
+            dark
+        </button>
+        <button class="button button-block button-royal">
+            royal
+        </button>
+        <button class="button button-block bg-yellow">
+            .bg-yellow
+        </button>
+
+        <button class="button button-block bg-gray">
+            .bg-gray
+        </button>
     </ion-content>
 </ion-view>
