--- a/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
+++ b/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
@@ -14,10 +14,64 @@ $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
+$stable:                          #dedede ;
+$positive:                        #233b83 ;
+$calm:                            #4F629c ;
+$balanced:                        #00b95c ;
+$energized:                       #ffc547 ;
+$dark:                            #3d3d3d ;
+$royal:                           #4d4d4d   ; 
+
+$border-radius-large:             6px ;
+$button-energized-text:           #000000 ;
+$bar-height:                      60px;
+
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
+.bg-main{
+    background:$positive;
+}
+.bg-yellow{
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffef44+0,ffc547+100 */
+background: #ffef44; /* Old browsers */
+background: -moz-linear-gradient(top,  #ffef44 0%, #ffc547 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #ffef44 0%,#ffc547 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #ffef44 0%,#ffc547 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffef44', endColorstr='#ffc547',GradientType=0 ); /* IE6-9 */
+color:#000000;
+}
+.bg-gray{
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f1f1f1+1,c4c4c4+100 */
+background: #f1f1f1; /* Old browsers */
+background: -moz-linear-gradient(top,  #f1f1f1 1%, #c4c4c4 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #f1f1f1 1%,#c4c4c4 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #f1f1f1 1%,#c4c4c4 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1f1f1', endColorstr='#c4c4c4',GradientType=0 ); /* IE6-9 */
 
+}
+.button{
+    border:0px;
+    border-radius:$border-radius-large;
+}
+.text-right{
+    text-align:right !important;
+}
+.text-center{
+    text-align:center !important;
+}
+.text-left{
+    text-align:left !important;
+}
+.block-center{
+    margin-left:auto;
+    margin-right:auto;
+    float:none;
+    display:inline-block
+}
+.space-top{
+    padding-top:20%;
+}
