implement UI login

--- a/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
+++ b/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
@@ -75,3 +75,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1f1f1', end
 .space-top{
     padding-top:20%;
 }
+a {
+    color: -webkit-link;
+    text-decoration: none !important;
+    cursor: auto;
+}
