--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
@@ -10,7 +10,7 @@
     <ion-footer-bar align-title="left" class="bar-balanced">
         <h1 class="title text-right">
             <a menu-close="" ng-click="skipLogin()" href="#">
-                เริ่มต้นใช้งาน >>>
+                เริ่มต้นใช้งาน >>
             </a>
         </h1>
     </ion-footer-bar>
