--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
@@ -1,4 +1,4 @@
-﻿<ion-view view-title="Today matches">
+﻿<ion-view view-title="DAILY SOCCER">
     <ion-content>
         <h1>Match 01</h1><br />
         <h1>Match 02</h1><br />
