--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
@@ -1,33 +1,67 @@
 ﻿<ion-side-menus enable-menu-with-back-views="false">
     <ion-side-menu-content>
-        <ion-nav-bar class="bar-stable">
-            <ion-nav-back-button>
-            </ion-nav-back-button>
-
+        <ion-nav-bar class="bar-balanced">
+            <ion-nav-buttons side="left">
+                <div class="button button-icon">
+                    <img width="35" height="35" src="../img/Icons/Trophy.png" />
+                    <div class="soccer-number">4
+                    </div>
+                </div>       
+            </ion-nav-buttons>
             <ion-nav-buttons side="right">
-                <button class="button button-icon button-clear ion-navicon" menu-toggle="right"></button>
+                <button class="button button-icon ion-navicon" menu-toggle="right"></button>
             </ion-nav-buttons>
         </ion-nav-bar>
-        <div class="tabs-striped tabs-top tabs-background-positive">
-            <div class="tabs">
-                <a class="tab-item active" href="#">
-                    1
-                </a>
-                <a class="tab-item" href="#">
-                    2
-                </a>
-                <a class="tab-item" href="#">
-                    3
-                </a>
-                <a class="tab-item" href="#">
-                    4
-                </a>
-                <a class="tab-item" href="#">
-                    5
-                </a>
-            </div>
-        </div>
-        <ion-nav-view class="XXX" name="MainContent"></ion-nav-view>
+        <ion-tabs class="tabs-dark taps-top">
+
+            <ion-tab title="1">
+                <!-- Tab 1 content -->
+                <ion-nav-view class="XXX" name="MainContent"></ion-nav-view>
+            </ion-tab>
+
+            <ion-tab title="2">
+                <!-- Tab 2 content -->
+                <ion-view view-title="Welcome">
+                    <ion-content padding="true">
+                        <h1>
+                            Tab 2
+                        </h1>
+                    </ion-content>
+                </ion-view>
+
+            </ion-tab>
+
+            <ion-tab title="3">
+                <!-- Tab 3 content -->
+                <ion-view view-title="Welcome">
+                    <ion-content padding="true">
+                        <h1>
+                            Tab 3
+                        </h1>
+                    </ion-content>
+                </ion-view>
+            </ion-tab>
+            <ion-tab title="4">
+                <!-- Tab 3 content -->
+                <ion-view view-title="Welcome">
+                    <ion-content padding="true">
+                        <h1>
+                            Tab 4
+                        </h1>
+                    </ion-content>
+                </ion-view>
+            </ion-tab>
+            <ion-tab title="5">
+                <!-- Tab 3 content -->
+                <ion-view view-title="Welcome">
+                    <ion-content padding="true">
+                        <h1>
+                            Tab 5
+                        </h1>
+                    </ion-content>
+                </ion-view>
+            </ion-tab>
+        </ion-tabs>
     </ion-side-menu-content>
 
     <div ng-include src="'/templates/SideMenu.html'"></div>
