--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
@@ -12,7 +12,7 @@
                 <button class="button button-icon ion-navicon" menu-toggle="right"></button>
             </ion-nav-buttons>
         </ion-nav-bar>
-        <ion-tabs class="tabs-dark taps-top">
+        <ion-tabs class="tabs-dark tabs-top">
 
             <ion-tab title="1">
                 <!-- Tab 1 content -->
