Created MatchService and the first service.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
@@ -1,4 +1,4 @@
 ﻿<h1>Login</h1>
 
-<div ng-click="loginWithFacebook()" class="button">Facebook</div>
-<div ng-click="skipLogin()" class="button">Guest</div>
+<div ng-click="accountCtrl.LoginWithFacebook()" class="button">Facebook</div>
+<div ng-click="accountCtrl.SkipLogin()" class="button">Guest</div>
