--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -9,16 +9,16 @@
             แต้มสะสม 7500
         </div>
         <div class="col col-center">
-            <button class="button-small button bg-yellow">
-                แลกของรางวัล
-            </button>
+                <a menu-close href="#/rewards/rewards" class="button-small button bg-yellow">
+                    แลกของรางวัล
+                </a>
         </div>
     </ion-header-bar>
     <ion-content  class="padding">
         <ion-list>
             <ion-item menu-close href="#/matches/todaymatches" class="item-royal ">
                 <div class="">
-                    <i >
+                    <i>
                         <img  src="../img/Icons/MenuIcon1.png" />
                     </i>
                     <span >
@@ -26,7 +26,7 @@
                     </span>
                 </div>          
             </ion-item>
-            <ion-item menu-close href="#/rewards/rewards" class="item-royal">
+            <ion-item menu-close href="#" class="item-royal">
                 <div class="">
                     <i >
                         <img src="../img/Icons/MenuIcon2.png" />
@@ -67,15 +67,15 @@
                     </span>
                 </div>                
             </ion-item>
-            <button class="button button-block bg-gray " href="#">เข้าสู่ระบบ</button>
-            <button class="button button-block button-balanced ">
+            <a class="button button-block bg-gray " href="#">เข้าสู่ระบบ</a>
+            <a class="button button-block button-balanced ">
                 <div class="padding">
                     <h2 >
                         <img height="40" src="../img/Icons/Playgame.png" />
                         เล่นเกมส์
                     </h2>
                 </div>             
-            </button>
+            </a>
         </ion-list>
     </ion-content>
 </ion-side-menu>
