--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
@@ -22,7 +22,8 @@
             <ion-tab title="2">
                 <!-- Tab 2 content -->
                 <ion-view view-title="Welcome">
-                    <ion-content padding="true">
+                    <ion-content>
+                        <div ng-include src="'/templates/Matches/_matchHeader.html'"></div>
                         <h1>
                             Tab 2
                         </h1>
@@ -34,7 +35,8 @@
             <ion-tab title="3">
                 <!-- Tab 3 content -->
                 <ion-view view-title="Welcome">
-                    <ion-content padding="true">
+                    <ion-content>
+                        <div ng-include src="'/templates/Matches/_matchHeader.html'"></div>
                         <h1>
                             Tab 3
                         </h1>
@@ -44,7 +46,8 @@
             <ion-tab title="4">
                 <!-- Tab 3 content -->
                 <ion-view view-title="Welcome">
-                    <ion-content padding="true">
+                    <ion-content>
+                        <div ng-include src="'/templates/Matches/_matchHeader.html'"></div>
                         <h1>
                             Tab 4
                         </h1>
@@ -54,7 +57,8 @@
             <ion-tab title="5">
                 <!-- Tab 3 content -->
                 <ion-view view-title="Welcome">
-                    <ion-content padding="true">
+                    <ion-content>
+                        <div ng-include src="'/templates/Matches/_matchHeader.html'"></div>
                         <h1>
                             Tab 5
                         </h1>
