--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_rewardTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_rewardTemplate.html
@@ -1,9 +1,8 @@
-﻿<ion-side-menus enable-menu-with-back-views="false">
+﻿<ion-side-menus enable-menu-with-back-views="true">
     <ion-side-menu-content>
         <ion-nav-bar class="bar-stable">
             <ion-nav-back-button>
             </ion-nav-back-button>
-
             <ion-nav-buttons side="right">
                 <button class="button button-icon button-clear ion-navicon" menu-toggle="right"></button>
             </ion-nav-buttons>
@@ -23,6 +22,5 @@
         </ion-nav-bar>
         <ion-nav-view name="MainContent"></ion-nav-view>
     </ion-side-menu-content>
-
     <div ng-include src="'/templates/SideMenu.html'"></div>
 </ion-side-menus>
