fix bug controller

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
@@ -5,11 +5,11 @@
         </div>
         <br />
 
-        <button ng-click="loginWithFacebook()" class="button col-80 button-calm">เข้าใช้งานผ่าน Facebook</button>
+        <button ng-click="accountCtrl.LoginWithFacebook()" class="button col-80 button-calm">เข้าใช้งานผ่าน Facebook</button>
     </ion-content>
     <ion-footer-bar align-title="left" class="bar-balanced">
         <h1 class="title text-right">
-            <a menu-close="" ng-click="skipLogin()" href="#">
+            <a menu-close ng-click="accountCtrl.SkipLogin()" href="#">
                 เริ่มต้นใช้งาน >>
             </a>
         </h1>
